# django_management_commands_logging

./: README.md  pyproject.toml
django_mc_logging/: pyvenv.cfg
src/django_management_commands_logging/: __init__.py  core.py
src/django_mc_logging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
